# h2gb

./: .editorconfig  .gitignore  Cargo.toml  PLANNING.md  README.md  TODO.md
bumpy-vector/: Cargo.toml
bumpy-vector/src/: README.md  lib.rs
docs/: datatype.md  transformer.md
generic-number/: Cargo.toml
generic-number/src/: README.md  character.rs  character_reader.rs  character_renderer.rs  float.rs  float_formatter.rs  float_reader.rs  float_renderer.rs  generic_number.rs  generic_reader.rs  integer.rs  integer_formatter.rs  integer_reader.rs  integer_renderer.rs  lib.rs
generic-number/src/generic_formatter/: mod.rs
generic-number/src/generic_formatter/binary_formatter/: mod.rs
generic-number/src/generic_formatter/boolean_formatter/: mod.rs
generic-number/src/generic_formatter/character_formatter/: mod.rs
generic-number/src/generic_formatter/default_formatter/: mod.rs
generic-number/src/generic_formatter/hex_formatter/: mod.rs
generic-number/src/generic_formatter/octal_formatter/: mod.rs
generic-number/src/generic_formatter/scientific_formatter/: mod.rs
generic-number/src/helpers/: context.rs
h2data/: Cargo.toml
h2data/src/: NOTES.md  README.md  lib.rs
h2data/src/bitmasks/: mod.rs
h2data/src/enums/: mod.rs  terraria_clothing.csv  terraria_game_mode.csv  terraria_version.csv
h2data/src/ng/: h2bitmasks.rs  h2constants.rs  h2enums.rs  mod.rs
h2datatype/: Cargo.toml
h2datatype/src/: README.md  alignment.rs  h2type.rs  h2typetrait.rs  lib.rs  resolved_type.rs
h2datatype/src/composite/: h2array.rs  h2struct.rs  mod.rs  tlv.rs
h2datatype/src/composite/string/: h2string.rs  lpstring.rs  ntstring.rs
h2datatype/src/data/: README.md  bitmasks.rs  constants.rs  data_entry.rs  data_trait.rs  enums.rs  file_type.rs  h2bitmasks.rs  h2enums.rs  load_options.rs  mod.rs  types.rs
h2datatype/src/data.old/: README.md
h2datatype/src/data/classes/: bitmasks.rs  constants.rs  enums.rs  mod.rs  types.rs
h2datatype/src/data/traits/: data_trait.rs  lookupable.rs  mod.rs
h2datatype/src/simple/: h2bitmask.rs  h2blob.rs  h2enum.rs  h2number.rs  h2pointer.rs  h2uuid.rs  mod.rs  rgb.rs
h2datatype/src/simple/network/: ipv4.rs  ipv6.rs  mac_address.rs  mac_address8.rs
h2datatype/src/simple/numeric/: h2character.rs  h2float.rs  h2integer.rs  mod.rs
h2datatype/src/simple/string/: h2string.rs  lpstring.rs  ntstring.rs
h2datatype/testdata/bitmasks/: test1.csv  test2.json  test3.yaml
h2datatype/testdata/constants/: test1.csv  test3.yaml  test4.ron
h2datatype/testdata/enums/: test1.csv  test2.json
h2datatype/testdata/nested/more/nested/: constants.csv
h2datatype/testdata/otherambiguous/namespace2/: ambiguous.csv
h2datatype/testdata/types/: struct.json  struct.yaml
h2gb/: Cargo.toml
h2gb/src/: README.md  lib.rs
h2gb/src/actions/: buffer_create_empty.rs  buffer_create_from_bytes.rs  buffer_extract.rs  buffer_transform.rs  entry_create.rs  entry_create_and_insert.rs  entry_set_comment.rs  layer_create.rs
h2gb/src/actions.bak/: buffer_clone_partial.rs  buffer_clone_shallow.rs  buffer_delete.rs  buffer_edit.rs  buffer_split.rs  buffer_untransform.rs  mod.rs  project_rename.rs
h2gb/src/analyzer/: README.md  helpers.rs  mod.rs  pe.rs  terraria.rs
h2gb/src/bumpy_vector/: mod.rs
h2gb/src/data/: README.md  mod.rs
h2gb/src/data/bitmasks/: mod.rs
h2gb/src/data/enums/: mod.rs  terraria_buff.csv
h2gb/src/datatype/: README.md  alignment.rs  h2type.rs  h2typetrait.rs  mod.rs  offset.rs  resolved_type.rs
h2gb/src/datatype/composite/: h2array.rs  h2struct.rs  mod.rs  tlv.rs
h2gb/src/datatype/composite/string/: h2string.rs  lpstring.rs  ntstring.rs
h2gb/src/datatype/simple/: h2bitmask.rs  h2blob.rs  h2enum.rs  h2number.rs  h2pointer.rs  h2uuid.rs  rgb.rs
h2gb/src/datatype/simple/network/: ipv4.rs  ipv6.rs  mac_address.rs  mac_address8.rs  mod.rs
h2gb/src/generic_number/generic_formatter/: mod.rs
h2gb/src/generic_number/generic_formatter/boolean_formatter/: mod.rs
h2gb/src/generic_number/generic_formatter/default_formatter/: mod.rs
h2gb/src/generic_number/generic_formatter/octal_formatter/: mod.rs
h2gb/src/generic_number/generic_formatter/scientific_formatter/: mod.rs
h2gb/src/generic_number/helpers/: context.rs  mod.rs
h2gb/src/multi_vector/: README.md
h2gb/src/project/: h2buffer.rs  h2entry.rs  h2layer.rs  h2project.rs  mod.rs
h2gb/src/transformation/: README.md
h2gb/src/transformation/transform/: transform_block_cipher.rs
h2gb/testdata/pe/bitmasks/: characteristics.csv  dll_characteristics.csv
h2gb/testdata/pe/enums/: machine_types.csv  subsystems.csv
h2gb/testdata/terraria/bitmasks/: visibility.csv
h2gb/testdata/terraria/enums/: body_type.csv  buffs.csv  clothing.csv  game_modes.csv  item_affix.csv  items.csv  versions.csv
h2gb/testdata/terraria/types/: item_affix.ron  lpstring.ron  spawnpoint_entry.ron  uint32.ron
h2transformation/: Cargo.toml
h2transformation/src/: README.md  lib.rs  transformer_trait.rs
h2transformation/src/transform/: transform_base32.rs  transform_base64.rs  transform_block_cipher.rs  transform_deflate.rs  transform_hex.rs  transform_null.rs  transform_stream_cipher.rs  transform_xor_by_constant.rs
hooks/pre-commit.d/: set-dash-euo-pipefail.sh  todo-finder.sh  update-readme-md.sh
hooks/pre-push.d/: run-tests.sh
src/: PLANNING.md  bumpy_hash_map.rs  bumpy_vector.rs  h2buffer.rs  h2datatype.rs  h2entry.rs  h2layer.rs  h2project.rs  h2transformation.rs  h2value.rs  lib.rs  main.rs
src/action/: buffer_clone_partial.rs  buffer_clone_shallow.rs  buffer_create_empty.rs  buffer_create_from_bytes.rs  buffer_delete.rs  buffer_edit.rs  buffer_rebase.rs  buffer_rename.rs  buffer_split.rs  buffer_transform.rs  buffer_untransform.rs  change_project_name.rs  mod.rs  null.rs  project_rename.rs
src/actions/: buffer_create_empty.rs  buffer_create_from_bytes.rs  buffer_extract.rs  buffer_transform.rs  entry_create_and_insert.rs  entry_create_from_type.rs  entry_insert.rs  entry_set_comment.rs  (+3 more)
src/actions.bak/: buffer_delete.rs  buffer_edit.rs  buffer_rebase.rs  buffer_rename.rs  mod.rs
(+176 files in other folders)
