[package]
name = "libh2gb"
version = "0.1.0"
authors = ["iagox86 <ron-git@skullsecurity.org>"]
edition = "2018"

[dependencies]
# Undo / redo
redo = { version = "~0.40.0", features = ["chrono", "serde"] }

# Serialize / deserialize
serde = { version = "~1.0.110", features = ["derive"] }
serde_json = "~1.0.53"
ron = "~0.5.1"
serde_yaml = "~0.8.12"
simple-error = "~0.2.1"

# Stuff I wrote
bumpy_vector = { git = "https://github.com/h2gb/bumpy_vector.git", version = "~0.0.0", features = ["serialize"], branch = "dev"}
multi_vector = { git = "https://github.com/h2gb/multi_vector.git", version = "~0.0.0", features = ["serialize"], branch = "dev"}
h2transformer = { git = "https://github.com/h2gb/h2transformer.git", version = "~0.0.0", features = ["serialize"], branch = "dev"}
sized_number = { git = "https://github.com/h2gb/sized_number.git", version = "~0.0.0", features = ["serialize"], branch = "dev"}

[dev-dependencies]
pretty_assertions = "~0.6.1"
