[package]
name = "libh2gb"
version = "0.1.0"
authors = ["Ron Bowes <ron@skullsecurity.net>"]
edition = "2018"
description = "A library for reverse engineering binary formats"
license = "MIT"
documentation = "https://github.com/h2gb/libh2gb"
homepage = "https://github.com/h2gb/libh2gb"
repository = "https://github.com/h2gb/libh2gb"
readme = "README.md"

# [lib]
# name = "libh2gb"

[dependencies]
# Undo / redo
redo = { version = "~0.40.0", features = ["chrono", "serde"] }

# Serialize / deserialize
serde = { version = "~1.0.110", features = ["derive"] }
serde_json = "~1.0.53"
ron = "~0.5.1"
serde_yaml = "~0.8.12"
simple-error = "~0.2.1"

# Formats / parsers
macaddr = "~1.0.1"
base64 = "~0.12.3"
base32 = "~0.4.0"
inflate = "~0.4.5"
hex = "~0.4.2"
byteorder = "~1.3.4"

# Crypto
cipher = "~0.2.5"

block-modes = "~0.7.0"
aes = "~0.6.0"
des = "~0.6.0"
salsa20 = "~0.7.2"
chacha20 = { version = "~0.6.0", features = ["legacy"] }

# Nettle has some crypto ciphers that the others are missing (such as Salsa20-128)
nettle = "~7.0.1"

# Lets us convert numbers into enums (used for h2enum type)
num-derive = "~0.3.3"
num-traits = "~0.2"

[dev-dependencies]
pretty_assertions = "~0.6.1"
