[package]
name = "generic-number"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.110", features = ["derive"] }
simple-error = "~0.2.1"
byteorder = "~1.3.4"
pad = "~0.1.6"

[dev-dependencies]
pretty_assertions = "~0.6.1"
