[package]
name = "h2data"
version = "0.1.0"
edition = "2018"

[dependencies]
generic-number = { path = "../generic-number" }

serde = { version = "~1.0.110", features = ["derive"] }
serde_yaml = "~0.8.23"
serde_json = "~1.0.74"

simple-error = "~0.2.1"
lazy_static = "~1.4.0"
csv = "~1.1.6"

[dev-dependencies]
pretty_assertions = "~0.6.1"
ron = "~0.5.1" # Used in a unit test, but not the actual crate
