[package]
name = "h2datatype"
version = "0.1.0"
edition = "2018"

[dependencies]
generic-number = { path = "../generic-number" }
h2data         = { path = "../h2data" }

serde = { version = "~1.0.110", features = ["derive"] }
simple-error = "~0.2.1"
macaddr = "~1.0.1"
uuid = "~0.8.2"

[dev-dependencies]
pretty_assertions = "~0.6.1"
ron = "~0.5.1" # Used in a unit test, but not the actual crate
