[package]
name = "h2datatype"
version = "0.1.0"
edition = "2018"

[dependencies]
generic-number = { path = "../generic-number" }

# Serialization
serde = { version = "~1.0.110", features = ["derive"] }
serde_yaml = "~0.8.23"
serde_json = "~1.0.74"
ron = "~0.7.0"
csv = "~1.1.6"

# Used for certain types
macaddr = "~1.0.1"
uuid = "~0.8.2"

# Error handling
simple-error = "~0.2.1"

# Loading data
walkdir = "~2.3.2"

[dev-dependencies]
pretty_assertions = "~0.6.1"
