[package]
name = "libh2gb"
version = "0.1.0"
authors = ["Ron Bowes <ron@skullsecurity.net>"]
edition = "2018"
description = "A library for reverse engineering binary formats"
license = "MIT"
documentation = "https://github.com/h2gb/libh2gb"
homepage = "https://github.com/h2gb/libh2gb"
repository = "https://github.com/h2gb/libh2gb"
readme = "README.md"

# [lib]
# name = "libh2gb"

[dependencies]
# Other parts of h2gb
generic-number   = { path = '../generic-number' }
bumpy-vector     = { path = '../bumpy-vector'   }
h2transformation = { path = '../h2transformation'   }

# Undo / redo
redo = { version = "~0.40.0", features = ["chrono", "serde"] }

# Serialize / deserialize
serde = { version = "~1.0.110", features = ["derive"] }
serde_json = "~1.0.53"
ron = "~0.5.1"
serde_yaml = "~0.8.12"
simple-error = "~0.2.1"

# Formats / parsers
macaddr = "~1.0.1"
byteorder = "~1.3.4"
uuid = "~0.8.2"

# Lets us convert numbers into enums (used for h2enum type)
# num-derive = "~0.3.3"
# num-traits = "~0.2"

# Macro for static initializers
lazy_static = "~1.4.0"

# Macro for initializing a HashMap
maplit = "~1.0.2"

# Pretty durations
hhmmss = "0.1"

# For loading enums
csv = "~1.1.6"

# Colors
colored = "~2.0.0"

[dev-dependencies]
pretty_assertions = "~0.6.1"
