[package]
name = "h2transformation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.110", features = ["derive"] }
simple-error = "~0.2.1"
hex = "~0.4.2"

# Compression
inflate = "~0.4.5"

# Formats
base64 = "~0.12.3"
base32 = "~0.4.0"

# Crypto
cipher = "~0.2.5"
block-modes = "~0.7.0"
aes = "~0.6.0"
des = "~0.6.0"
salsa20 = "~0.7.2"
chacha20 = { version = "~0.6.0", features = ["legacy"] }

# Nettle has some crypto ciphers that the others are missing (such as Salsa20-128)
nettle = "~7.0.1"

[dev-dependencies]
pretty_assertions = "~0.6.1"
